fix(rich-text-editor): Fixes select dropdown overlapping issue on smaller screen sizes (#2812)
fix(rich-text-editor): Added docs

fix(rich-text-editor): Changed css that targeted value attributes to apply styles via class names

fix(rich-text-editor): changed class names to be more sematic

fix(rich-text-editor): added bottom margin to font class to even out toolbar spacing

fix(rich-text-editor): Scoped a combobox max-width to a slds-region_narrow class

fix(rich-text-editor): Added snapshot test for toolbar narrow

fix(rich-text-editor): Removed unnecessary CSS and updated docs

fix(rich-text-editor): fixed docs typo + fixed issue where RTE shows no vertical space between selects and next row

fix(rich-text-editor): Updated annotations for narrow class

fix(rich-text-editor): Updated css to add margin bottom on narrow region to slds-grid

fix(rich-text-editor): added a class to apply spacing to

fix(rich-text-editor): Updated markup

--- a/ui/components/rich-text-editor/base/_index.scss
+++ b/ui/components/rich-text-editor/base/_index.scss
@@ -66,6 +66,18 @@
   margin-right: $spacing-xx-small;
 }
 
+// This class should be placed on a containing div when RTE toolbar is in a small space
+.slds-region_narrow {
+
+  .slds-combobox {
+    max-width: 11rem;
+  }
+
+  .slds-rich-text-editor__spacing-wrapper {
+    margin-bottom: $spacing-xx-small;
+  }
+}
+
 /**
  * Focus state for rich text editor
  *
